# internal/ambulance_wl/routers.go
@@ -67,6 +67,8 @@ type ApiHandleFunctions struct {
 	AmbulanceConditionsAPI AmbulanceConditionsAPI
 	// Routes for the AmbulanceWaitingListAPI part of the API
 	AmbulanceWaitingListAPI AmbulanceWaitingListAPI
+	// Routes for the AmbulancesAPI part of the API
+	AmbulancesAPI AmbulancesAPI
 }
 
 func getRoutes(handleFunctions ApiHandleFunctions) []Route {
@@ -86,7 +88,7 @@ func getRoutes(handleFunctions ApiHandleFunctions) []Route {
 		{
 			"DeleteWaitingListEntry",
 			http.MethodDelete,
-			"/api/waiting-list/:ambulanceId/entries/:entryId",
+			"/api/waiting-list/:ambulanceId/condition",
 			handleFunctions.AmbulanceWaitingListAPI.DeleteWaitingListEntry,
 		},
 		{
@@ -104,8 +106,20 @@ func getRoutes(handleFunctions ApiHandleFunctions) []Route {
 		{
 			"UpdateWaitingListEntry",
 			http.MethodPut,
-			"/api/waiting-list/:ambulanceId/entries/:entryId",
+			"/api/waiting-list/:ambulanceId/condition",
 			handleFunctions.AmbulanceWaitingListAPI.UpdateWaitingListEntry,
+		},
+		{
+			"CreateAmbulance",
+			http.MethodPost,
+			"/api/ambulance",
+			handleFunctions.AmbulancesAPI.CreateAmbulance,
+		},
+		{
+			"DeleteAmbulance",
+			http.MethodDelete,
+			"/api/ambulance/:ambulanceId",
+			handleFunctions.AmbulancesAPI.DeleteAmbulance,
 		},
 	}
 }
